--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  curved_navigation_bar: ^1.0.3
+
+  bloc: ^8.1.4
+
+  persistent_bottom_nav_bar: ^6.2.1
+
+  flutter_bloc: ^8.1.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
