--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
 
   firebase_auth: any
 
+  supabase_flutter: ^2.8.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
