--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
+    "https": "^1.0.0",
     "stripe": "^17.7.0"
   },
   "devDependencies": {
